src/OpenCvSharp.Native/include/open_cv_sharp/ximgproc/ximgproc.h

typedef struct jyppx_ocv_stereo_bm jyppx_ocv_stereo_bm;
typedef struct jyppx_ocv_stereo_sgbm jyppx_ocv_stereo_sgbm;
typedef struct jyppx_ocv_stereo_matcher jyppx_ocv_stereo_matcher;
typedef struct jyppx_ocv_ximgproc_fast_line_detector jyppx_ocv_ximgproc_fast_line_detector;
typedef struct jyppx_ocv_ximgproc_disparity_filter jyppx_ocv_ximgproc_disparity_filter;
typedef struct jyppx_ocv_ximgproc_disparity_wls_filter jyppx_ocv_ximgproc_disparity_wls_filter;
typedef struct jyppx_ocv_ximgproc_fast_bilateral_solver_filter jyppx_ocv_ximgproc_fast_bilateral_solver_filter;
typedef struct jyppx_ocv_ximgproc_sparse_match_interpolator jyppx_ocv_ximgproc_sparse_match_interpolator;
typedef struct jyppx_ocv_ximgproc_edge_aware_interpolator jyppx_ocv_ximgproc_edge_aware_interpolator;
typedef struct jyppx_ocv_ximgproc_ric_interpolator jyppx_ocv_ximgproc_ric_interpolator;
typedef struct jyppx_ocv_ximgproc_rect
{
    int x;
    int y;
    int width;
    int height;
} jyppx_ocv_ximgproc_rect;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_line_detector_detect_fill(
    jyppx_ocv_ximgproc_fast_line_detector* detector,
    const jyppx_ocv_mat* image,
    float* lines,
    int line_capacity,
    int* line_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_line_detector_draw_segments(
    jyppx_ocv_ximgproc_fast_line_detector* detector,
    jyppx_ocv_mat* image,
    const jyppx_ocv_mat* lines,
    int draw_arrow,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int line_thickness);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_line_detector_draw_segments_array(
    jyppx_ocv_ximgproc_fast_line_detector* detector,
    jyppx_ocv_mat* image,
    const float* lines,
    int line_count,
    int draw_arrow,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int line_thickness);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_create_generic(
    int use_confidence,
    jyppx_ocv_ximgproc_disparity_wls_filter** filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_create_from_stereo_bm(
    const jyppx_ocv_stereo_bm* matcher_left,
    jyppx_ocv_ximgproc_disparity_wls_filter** filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_create_from_stereo_sgbm(
    const jyppx_ocv_stereo_sgbm* matcher_left,
    jyppx_ocv_ximgproc_disparity_wls_filter** filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_create_from_stereo_matcher(
    const jyppx_ocv_stereo_matcher* matcher_left,
    jyppx_ocv_ximgproc_disparity_wls_filter** filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_create_right_matcher_from_stereo_bm(
    const jyppx_ocv_stereo_bm* matcher_left,
    jyppx_ocv_stereo_matcher** matcher_right);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_create_right_matcher_from_stereo_sgbm(
    const jyppx_ocv_stereo_sgbm* matcher_left,
    jyppx_ocv_stereo_matcher** matcher_right);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_create_right_matcher_from_stereo_matcher(
    const jyppx_ocv_stereo_matcher* matcher_left,
    jyppx_ocv_stereo_matcher** matcher_right);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_disparity_wls_filter_release_handle(
    jyppx_ocv_ximgproc_disparity_wls_filter* filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_filter_filter(
    jyppx_ocv_ximgproc_disparity_filter* filter,
    const jyppx_ocv_mat* disparity_map_left,
    const jyppx_ocv_mat* left_view,
    jyppx_ocv_mat* filtered_disparity_map,
    const jyppx_ocv_mat* disparity_map_right,
    const jyppx_ocv_ximgproc_rect* roi,
    const jyppx_ocv_mat* right_view);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_filter(
    jyppx_ocv_ximgproc_disparity_wls_filter* filter,
    const jyppx_ocv_mat* disparity_map_left,
    const jyppx_ocv_mat* left_view,
    jyppx_ocv_mat* filtered_disparity_map,
    const jyppx_ocv_mat* disparity_map_right,
    const jyppx_ocv_ximgproc_rect* roi,
    const jyppx_ocv_mat* right_view);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_get_lambda(
    jyppx_ocv_ximgproc_disparity_wls_filter* filter,
    double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_set_lambda(
    jyppx_ocv_ximgproc_disparity_wls_filter* filter,
    double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_get_sigma_color(
    jyppx_ocv_ximgproc_disparity_wls_filter* filter,
    double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_set_sigma_color(
    jyppx_ocv_ximgproc_disparity_wls_filter* filter,
    double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_get_lrc_thresh(
    jyppx_ocv_ximgproc_disparity_wls_filter* filter,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_set_lrc_thresh(
    jyppx_ocv_ximgproc_disparity_wls_filter* filter,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_get_depth_discontinuity_radius(
    jyppx_ocv_ximgproc_disparity_wls_filter* filter,
    int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_set_depth_discontinuity_radius(
    jyppx_ocv_ximgproc_disparity_wls_filter* filter,
    int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_get_confidence_map(
    jyppx_ocv_ximgproc_disparity_wls_filter* filter,
    jyppx_ocv_mat* confidence_map);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_disparity_wls_filter_get_roi(
    jyppx_ocv_ximgproc_disparity_wls_filter* filter,
    jyppx_ocv_ximgproc_rect* roi);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_get_disparity_vis(
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst,
    double scale);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_compute_mse(
    const jyppx_ocv_mat* gt,
    const jyppx_ocv_mat* src,
    const jyppx_ocv_ximgproc_rect* roi,
    double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_compute_bad_pixel_percent(
    const jyppx_ocv_mat* gt,
    const jyppx_ocv_mat* src,
    const jyppx_ocv_ximgproc_rect* roi,
    int thresh,
    double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_bilateral_solver_filter_create(
    const jyppx_ocv_mat* guide,
    double sigma_spatial,
    double sigma_luma,
    double sigma_chroma,
    double lambda,
    int num_iter,
    double max_tol,
    jyppx_ocv_ximgproc_fast_bilateral_solver_filter** filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_fast_bilateral_solver_filter_release_handle(
    jyppx_ocv_ximgproc_fast_bilateral_solver_filter* filter);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_bilateral_solver_filter_filter(
    jyppx_ocv_ximgproc_fast_bilateral_solver_filter* filter,
    const jyppx_ocv_mat* src,
    const jyppx_ocv_mat* confidence,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_fast_bilateral_solver_filter_run(
    const jyppx_ocv_mat* guide,
    const jyppx_ocv_mat* src,
    const jyppx_ocv_mat* confidence,
    jyppx_ocv_mat* dst,
    double sigma_spatial,
    double sigma_luma,
    double sigma_chroma,
    double lambda,
    int num_iter,
    double max_tol);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_create(
    jyppx_ocv_ximgproc_edge_aware_interpolator** interpolator);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_edge_aware_interpolator_release_handle(
    jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_create(
    jyppx_ocv_ximgproc_ric_interpolator** interpolator);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_ximgproc_ric_interpolator_release_handle(
    jyppx_ocv_ximgproc_ric_interpolator* interpolator);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_sparse_match_interpolator_interpolate(
    jyppx_ocv_ximgproc_sparse_match_interpolator* interpolator,
    const jyppx_ocv_mat* from_image,
    const jyppx_ocv_mat* from_points,
    const jyppx_ocv_mat* to_image,
    const jyppx_ocv_mat* to_points,
    jyppx_ocv_mat* dense_flow);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_interpolate(
    jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator,
    const jyppx_ocv_mat* from_image,
    const jyppx_ocv_mat* from_points,
    const jyppx_ocv_mat* to_image,
    const jyppx_ocv_mat* to_points,
    jyppx_ocv_mat* dense_flow);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_interpolate(
    jyppx_ocv_ximgproc_ric_interpolator* interpolator,
    const jyppx_ocv_mat* from_image,
    const jyppx_ocv_mat* from_points,
    const jyppx_ocv_mat* to_image,
    const jyppx_ocv_mat* to_points,
    jyppx_ocv_mat* dense_flow);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_set_cost_map(
    jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator,
    const jyppx_ocv_mat* cost_map);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_ric_interpolator_set_cost_map(
    jyppx_ocv_ximgproc_ric_interpolator* interpolator,
    const jyppx_ocv_mat* cost_map);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_get_k(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_set_k(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_get_sigma(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_set_sigma(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, float value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_get_lambda(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, float* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_ximgproc_edge_aware_interpolator_set_lambda(jyppx_ocv_ximgproc_edge_aware_interpolator* interpolator, float value);