src/OpenCvSharp/Internal/Interop/NativeMethods.XImgProc.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_detect_fill")]
        internal static extern int XImgProcFastLineDetectorDetectFill(IntPtr detector, IntPtr image, float[] lines, int lineCapacity, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_draw_segments")]
        internal static extern int XImgProcFastLineDetectorDrawSegments(IntPtr detector, IntPtr image, IntPtr lines, int drawArrow, double colorV0, double colorV1, double colorV2, double colorV3, int lineThickness);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_line_detector_draw_segments_array")]
        internal static extern int XImgProcFastLineDetectorDrawSegmentsArray(IntPtr detector, IntPtr image, float[] lines, int lineCount, int drawArrow, double colorV0, double colorV1, double colorV2, double colorV3, int lineThickness);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_create_generic")]
        internal static extern int XImgProcDisparityWLSFilterCreateGeneric(int useConfidence, out IntPtr filter);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_create_from_stereo_bm")]
        internal static extern int XImgProcDisparityWLSFilterCreateFromStereoBM(IntPtr matcherLeft, out IntPtr filter);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_create_from_stereo_sgbm")]
        internal static extern int XImgProcDisparityWLSFilterCreateFromStereoSGBM(IntPtr matcherLeft, out IntPtr filter);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_create_from_stereo_matcher")]
        internal static extern int XImgProcDisparityWLSFilterCreateFromStereoMatcher(IntPtr matcherLeft, out IntPtr filter);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_create_right_matcher_from_stereo_bm")]
        internal static extern int XImgProcCreateRightMatcherFromStereoBM(IntPtr matcherLeft, out IntPtr matcherRight);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_create_right_matcher_from_stereo_sgbm")]
        internal static extern int XImgProcCreateRightMatcherFromStereoSGBM(IntPtr matcherLeft, out IntPtr matcherRight);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_create_right_matcher_from_stereo_matcher")]
        internal static extern int XImgProcCreateRightMatcherFromStereoMatcher(IntPtr matcherLeft, out IntPtr matcherRight);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_release_handle")]
        internal static extern void XImgProcDisparityWLSFilterReleaseHandle(IntPtr filter);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_filter_filter")]
        internal static extern int XImgProcDisparityFilterFilter(IntPtr filter, IntPtr disparityMapLeft, IntPtr leftView, IntPtr filteredDisparityMap, IntPtr disparityMapRight, ref XImgProcRectNative roi, IntPtr rightView);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_filter")]
        internal static extern int XImgProcDisparityWLSFilterFilter(IntPtr filter, IntPtr disparityMapLeft, IntPtr leftView, IntPtr filteredDisparityMap, IntPtr disparityMapRight, ref XImgProcRectNative roi, IntPtr rightView);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_get_lambda")]
        internal static extern int XImgProcDisparityWLSFilterGetLambda(IntPtr filter, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_set_lambda")]
        internal static extern int XImgProcDisparityWLSFilterSetLambda(IntPtr filter, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_get_sigma_color")]
        internal static extern int XImgProcDisparityWLSFilterGetSigmaColor(IntPtr filter, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_set_sigma_color")]
        internal static extern int XImgProcDisparityWLSFilterSetSigmaColor(IntPtr filter, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_get_lrc_thresh")]
        internal static extern int XImgProcDisparityWLSFilterGetLrcThresh(IntPtr filter, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_set_lrc_thresh")]
        internal static extern int XImgProcDisparityWLSFilterSetLrcThresh(IntPtr filter, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_get_depth_discontinuity_radius")]
        internal static extern int XImgProcDisparityWLSFilterGetDepthDiscontinuityRadius(IntPtr filter, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_set_depth_discontinuity_radius")]
        internal static extern int XImgProcDisparityWLSFilterSetDepthDiscontinuityRadius(IntPtr filter, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_get_confidence_map")]
        internal static extern int XImgProcDisparityWLSFilterGetConfidenceMap(IntPtr filter, IntPtr confidenceMap);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_disparity_wls_filter_get_roi")]
        internal static extern int XImgProcDisparityWLSFilterGetRoi(IntPtr filter, out XImgProcRectNative roi);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_get_disparity_vis")]
        internal static extern int XImgProcGetDisparityVis(IntPtr src, IntPtr dst, double scale);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_compute_mse")]
        internal static extern int XImgProcComputeMSE(IntPtr gt, IntPtr src, ref XImgProcRectNative roi, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_compute_bad_pixel_percent")]
        internal static extern int XImgProcComputeBadPixelPercent(IntPtr gt, IntPtr src, ref XImgProcRectNative roi, int thresh, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_bilateral_solver_filter_create")]
        internal static extern int XImgProcFastBilateralSolverFilterCreate(IntPtr guide, double sigmaSpatial, double sigmaLuma, double sigmaChroma, double lambda, int numIter, double maxTol, out IntPtr filter);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_bilateral_solver_filter_release_handle")]
        internal static extern void XImgProcFastBilateralSolverFilterReleaseHandle(IntPtr filter);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_bilateral_solver_filter_filter")]
        internal static extern int XImgProcFastBilateralSolverFilterFilter(IntPtr filter, IntPtr src, IntPtr confidence, IntPtr dst);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_fast_bilateral_solver_filter_run")]
        internal static extern int XImgProcFastBilateralSolverFilterRun(IntPtr guide, IntPtr src, IntPtr confidence, IntPtr dst, double sigmaSpatial, double sigmaLuma, double sigmaChroma, double lambda, int numIter, double maxTol);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_create")]
        internal static extern int XImgProcEdgeAwareInterpolatorCreate(out IntPtr interpolator);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_release_handle")]
        internal static extern void XImgProcEdgeAwareInterpolatorReleaseHandle(IntPtr interpolator);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_create")]
        internal static extern int XImgProcRICInterpolatorCreate(out IntPtr interpolator);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_release_handle")]
        internal static extern void XImgProcRICInterpolatorReleaseHandle(IntPtr interpolator);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_sparse_match_interpolator_interpolate")]
        internal static extern int XImgProcSparseMatchInterpolatorInterpolate(IntPtr interpolator, IntPtr fromImage, IntPtr fromPoints, IntPtr toImage, IntPtr toPoints, IntPtr denseFlow);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_interpolate")]
        internal static extern int XImgProcEdgeAwareInterpolatorInterpolate(IntPtr interpolator, IntPtr fromImage, IntPtr fromPoints, IntPtr toImage, IntPtr toPoints, IntPtr denseFlow);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_interpolate")]
        internal static extern int XImgProcRICInterpolatorInterpolate(IntPtr interpolator, IntPtr fromImage, IntPtr fromPoints, IntPtr toImage, IntPtr toPoints, IntPtr denseFlow);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_cost_map")]
        internal static extern int XImgProcEdgeAwareInterpolatorSetCostMap(IntPtr interpolator, IntPtr costMap);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_cost_map")]
        internal static extern int XImgProcRICInterpolatorSetCostMap(IntPtr interpolator, IntPtr costMap);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_get_k")]
        internal static extern int XImgProcEdgeAwareInterpolatorGetK(IntPtr interpolator, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_k")]
        internal static extern int XImgProcEdgeAwareInterpolatorSetK(IntPtr interpolator, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_get_sigma")]
        internal static extern int XImgProcEdgeAwareInterpolatorGetSigma(IntPtr interpolator, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_sigma")]
        internal static extern int XImgProcEdgeAwareInterpolatorSetSigma(IntPtr interpolator, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_get_lambda")]
        internal static extern int XImgProcEdgeAwareInterpolatorGetLambda(IntPtr interpolator, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_lambda")]
        internal static extern int XImgProcEdgeAwareInterpolatorSetLambda(IntPtr interpolator, float value);
